         Sarpe).
- TW-186 Increase for numerical UDAs (thanks to Steffen Uhlig).
- TW-193 Support listing breaks.
- TW-197 New virtual tag READY.
- TW-218 Reveal terms of urgency calculation for a given task (thanks to Max
         Muller).
- TW-221 Migrate task-faq man page to the Wiki.
- TW-230 Filter tasks on partial UUIDs (thanks to Paul Kishimoto).
- TW-242 extra Space when annotating a path/filename, taskopen can not open the
         file (thanks to Andreas Kalex).
- TW-244 task add "Description (Information)" results in
         "Description ( Information)".
- TW-248 Substitute text doesn't work with forward slash (thanks to Jostein
         Berntsen).
- TW-249 Report filters don't allow parantheses (thanks to Philipp Woelfel).
- TW-250 Opening parenthesis in description gets padded in task 2.0.0 bet 2
         (thanks to Michelle Crane).
- TW-251 extra spaces added after ( and / (thanks to Andy Spiegl).
- TW-252 task done - Doesn't stop task before marking complete (thanks to
         Renato Alves).
- TW-253 Unrecognized taskwarrior file format. in
         /Users/user/Dropbox/.task/completed.data at line 1 (thanks to Kosta
         Harlan).
- TW-255 'Mask' instead of 'iMask' shown in info report (thanks to Benjamin
         Weber)
- TW-257 limit: not working properly (thanks to Aikido Guy).
- TW-259 Hyphenated words are split when added (thanks to Ben Boeckel).
- TW-261 Easy to create "not deletable" task (thanks to Jan Kunder).
- TW-262 Attribute modifiers not working within parentheses (thanks to Johannes
         Schlatow).
- TW-266 Allow project auto-completion to search completed tasks (thanks to
         Kosta Harlan).
- TW-268 escaped backslashes do not work with "modify" (thanks to Steve Rader).
- TW-271 Parser still looks for task id even when -- is used (thanks to Jim B).
- TW-276 Path is wrongly added when using annotate (thanks to Jostein Berntsen).
- TW-277 Complex filters can skip infix term expansion.